<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="20dp"
    tools:context=".ui.RegistrationActivity">

    <TextView
        android:id="@+id/txtViewWelcomeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:text="@string/welcome"
        android:textColor="@android:color/holo_blue_bright"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTxtNickname"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="52dp"
        android:autofillHints="username"
        android:backgroundTint="@android:color/darker_gray"
        android:ems="12"
        android:hint="@string/create_nickname"
        android:inputType="text"
        android:labelFor="@+id/editTxtNicknameReg"
        android:text=""
        android:textColor="@android:color/holo_blue_bright"
        android:textColorHint="@android:color/holo_blue_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewWelcomeTitle" />

    <EditText
        android:id="@+id/editTxtLogin"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:autofillHints="username"
        android:backgroundTint="@android:color/darker_gray"
        android:ems="12"
        android:hint="@string/create_login"
        android:inputType="text"
        android:labelFor="@+id/editTxtLoginReg"
        android:text=""
        android:textColor="@android:color/holo_blue_bright"
        android:textColorHint="@android:color/holo_blue_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTxtNickname" />

    <EditText
        android:id="@+id/editTxtPassword"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:autofillHints="username"
        android:backgroundTint="@android:color/darker_gray"
        android:ems="12"
        android:hint="@string/create_password"
        android:inputType="textPassword"
        android:labelFor="@+id/editTxtPasswrodReg"
        android:text=""
        android:textColor="@android:color/holo_blue_bright"
        android:textColorHint="@android:color/holo_blue_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTxtLogin" />

    <Button
        android:id="@+id/btnCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:backgroundTint="@android:color/holo_blue_bright"
        android:text="@string/create_account"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTxtPassword" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/material_dynamic_neutral10"
        android:text="@string/back_to_log_in_page"
        android:textColor="@android:color/holo_red_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>