<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/material_dynamic_neutral10"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.060000002">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="137dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtViewRoute"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="7dp"
                android:text="@string/route_example"
                android:textColor="@android:color/holo_blue_bright"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtViewDateTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="7dp"
                android:text="@string/date_time_example"
                android:textColor="@android:color/holo_blue_bright"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtViewRoute" />

            <TextView
                android:id="@+id/txtViewPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="7dp"
                android:text="@string/example_price"
                android:textColor="@android:color/holo_blue_bright"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtViewDateTime" />

            <ImageButton
                android:id="@+id/btnStar"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="30dp"
                android:background="@android:color/transparent"
                android:padding="8dp"
                android:text="@string/a_symbol"
                android:textColor="@android:color/transparent"
                app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/txtViewFlightNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example_flight_number"
                android:textSize="15sp"
                android:padding="7dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtViewPrice" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>